# OpenCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run
src/Utilities/: CMakeLists.txt
src/Utilities/include/FileSystem/: ValidatePath.h
src/include/: BaseVideo.h  CVDecoder.h  CVEncoder.h  Filters.h  VideoOverlayer.h
src/src/: CVDecoder.cpp  CVEncoder.cpp  Filters.cpp  VideoOverlayer.cpp  main.cpp
testData/: bacground2.avi  test2.avi
